untill positive section

--- a/index.html
+++ b/index.html
@@ -56,6 +56,36 @@
 
 
 
+        <section class="section2">
+             <h3 class="myplan-title">
+                 My Plans
+             </h3>
+             <div class="myplan-images-container">
+                 <div class="image-box">
+                     <img src="./images/icons/web.png" alt="">
+                     <h4 class="image-box-title">Web Development</h4>
+                     <p class="image-box-description">I want to start</p>
+                 </div>
+                 <div class="image-box">
+                      <img src="./images/icons/js.png" alt="">
+                      <h4 class="image-box-title">Javascript</h4>
+                      <p class="image-box-description">I want to start</p>
+                 </div>
+                 <div class="image-box">
+                     <img src="./images/icons/smoke.png" alt="">
+                     <h4 class="image-box-title">Smoking Habit</h4>
+                     <p class="image-box-description">I want to start</p>
+                 </div>
+                 <div class="image-box">
+                      <img src="./images/icons/ecom.png" alt="">
+                      <h4 class="image-box-title">ecommerce</h4>
+                      <p class="image-box-description">I want to start</p>
+                 </div>
+             </div>
+        </section>
+
+
+
     </main>
 
 
