--- a/index.html
+++ b/index.html
@@ -85,12 +85,39 @@
         </section>
 
 
+        <section class="section3">
+            <div class="main-box">
+                <h3 class="main-box-title">
+                    Always keep a positive mindset
+                </h3>
+                <button class="btn-secondary">Call Now</button>
+            </div>
+        </section>
 
     </main>
 
 
     <footer>
+          <div class="footer-container">
+           
+            <div class="future">
+                <h3 class="future-title">Future</h3>
+                <p class="future-description1">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p class="future-description2">Email : info@gmail.com</p>
+                <p class="future-description2">Phone : 01500 00 00 00</p>
+                <div class="future-image-container">
+                    <img src="./images/icons/fb.png" alt="">
+                    <img src="./images/icons/twitter.png" alt="">
+                    <img src="./images/icons/youtube.png" alt="">
+                </div>
+            </div>
 
+            <div class="subscribe">
+                 <input type="text" placeholder="Enter your email">
+                 <button class="btn-secondary">Subscribe</button>
+            </div>
+
+          </div>
     </footer>
     
 
