--- a/index.html
+++ b/index.html
@@ -113,7 +113,8 @@
             </div>
 
             <div class="subscribe">
-                 <input type="text" placeholder="Enter your email">
+                 <h3 class="future-title2">Subscribe</h3>
+                 <input type="text" placeholder="Enter your email"><br>
                  <button class="btn-secondary">Subscribe</button>
             </div>
 
